# Image-Processing

./: .gitignore  NREA.py  NREA_ca_gb_comparison.py  NREA_epochs_trend.py  README.md  ROF.py  calc_SNR.py  calc_SNR_assays.py  calc_metrics_for_folder.py  calc_metrics_reliability.py  calc_roi_bg.py  camera_configs.py  compare_native_to_custom.py  compare_settings_range.py  cropping.py  find_circle.py  find_circles_grid.py  full_pipeline.py  helpers.py  image_histogram.py  image_similarity.py  image_stacking.py  low_intensity_reliability.py  plot_paper_figure.py  pyproject.toml  requirements.txt  run_NREA.py  run_NREA_filter_comparison.py  run_ROF.py  run_full_pipeline.py  run_image_stacking.py  settings.py
SNR_enhancing/: NREA.py  image_stacking.py
denoising/: NREA.py  ROF.py  image_stacking.py
helpers/: CLI_options.py  helpers.py  plot_cut.py
metrics/: SNR_metrics.py  metrics_reliability.py
n2v/: 02_prediction.ipynb  README.md
n2v/models/n2v_2D/: config.json  test_input.npy  test_output.npy
n2v/models/n2v_HuaweiP20/: config.json  test_input.npy  test_output.npy
n2v/models/n2v_HuaweiP20_2_low_intensity/: config.json  napari-n2v.md  (+2 more)
ov_control/: README.md  ble_receiver.py  serial_receiver_grayscale.py  serial_receiver_jpg.py  serial_receiver_rgb.py
ov_control/ble_connect/: ble_connect.ino
ov_control/ble_photo/: ble_photo.ino
ov_control/serial_photo/: camera_pins.h  serial_photo.ino
ov_control/serial_photo_grayscale/: serial_photo_grayscale.ino
ov_control/serial_photo_rgb/: serial_photo_rgb.ino
paperplots/helpers/: helpers.py  plot.py
(+39 files in other folders)
